force-app/main/default/objects/Lead/fields/How_did_you_Hear_about_Camp_Quality__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_Hear_about_Camp_Quality__c</fullName>
    <label>How did you Hear about Camp Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camp Quality Representative</fullName>
            </value>
            <value>
                <fullName>Cancer Hub Referral</fullName>
            </value>
            <value>
                <fullName>Child Life Therapist</fullName>
            </value>
            <value>
                <fullName>Friend, Relative or Colleague</fullName>
            </value>
            <value>
                <fullName>Hospital Posters/Brochures/Flyers</fullName>
            </value>
            <value>
                <fullName>Hospital Ward Staff</fullName>
            </value>
            <value>
                <fullName>Media/Television, Radio &amp; Newspaper</fullName>
            </value>
            <value>
                <fullName>Other Charity</fullName>
            </value>
            <value>
                <fullName>Puppet Hospital Visit</fullName>
            </value>
            <value>
                <fullName>Puppet School Visit</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>A family facing cancer</fullName>
            </value>
            <value>
                <fullName>Camp Quality Website/Internet Search</fullName>
            </value>
            <value>
                <fullName>Service provider / health professional</fullName>
            </value>
            <value>
                <fullName>Another Family</fullName>
                <isActive>false</isActive>
                <label>A family facing cancer</label>
            </value>
            <value>
                <fullName>BroUp</fullName>
                <isActive>false</isActive>
                <label>BroUp</label>
            </value>
            <value>
                <fullName>Camp Quality Team</fullName>
                <isActive>false</isActive>
                <label>Camp Quality Team</label>
            </value>
            <value>
                <fullName>Camp Quality Volunteer</fullName>
                <isActive>false</isActive>
                <label>Camp Quality Volunteer</label>
            </value>
            <value>
                <fullName>Camp Quality Website</fullName>
                <isActive>false</isActive>
                <label>Camp Quality Website</label>
            </value>
            <value>
                <fullName>Website</fullName>
                <isActive>false</isActive>
                <label>Camp Quality Website/Internet Search</label>
            </value>
            <value>
                <fullName>Camp Quality brochure / poster</fullName>
                <isActive>false</isActive>
                <label>Camp Quality brochure / poster</label>
            </value>
            <value>
                <fullName>Internet Search</fullName>
                <isActive>false</isActive>
                <label>Internet Search</label>
            </value>
            <value>
                <fullName>Media editorial (discussion on TV, etc)</fullName>
                <isActive>false</isActive>
                <label>Media editorial (discussion on TV, etc)</label>
            </value>
            <value>
                <fullName>Media editorial (discussionon TV, etc)</fullName>
                <isActive>false</isActive>
                <label>Media editorial (discussionon TV, etc)</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Play Therapist</fullName>
                <isActive>false</isActive>
                <label>Play Therapist</label>
            </value>
            <value>
                <fullName>Puppet Visit</fullName>
                <isActive>false</isActive>
                <label>Puppet Visit</label>
            </value>
            <value>
                <fullName>Referral - CQ website referral</fullName>
                <isActive>false</isActive>
                <label>Referral - CQ website referral</label>
            </value>
            <value>
                <fullName>Referral - Redkite direct</fullName>
                <isActive>false</isActive>
                <label>Referral - Redkite direct</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>