force-app/main/default/objects/Lead/fields/How_did_you_year_about_CQ_Other__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_year_about_CQ_Other__c</fullName>
    <description>Explanation for when &apos;Other&apos; is chosen for &apos;How did you hear about Camp Quality?&apos;</description>
    <inlineHelpText>Explanation for when &apos;Other&apos; is chosen for &apos;How did you hear about Camp Quality?&apos;</inlineHelpText>
    <label>How did you year about CQ (Other)</label>
    <type>TextArea</type>
</CustomField>