force-app/main/default/objects/Lead/fields/Illness_Limitation__c.field-meta.xml
<CustomField>
    <fullName>Illness_Limitation__c</fullName>
    <label>Illness / Limitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>