force-app/main/default/objects/Lead/fields/Illness_Limitation_Details__c.field-meta.xml
<CustomField>
    <fullName>Illness_Limitation_Details__c</fullName>
    <label>Illness / Limitation Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>