force-app/main/default/objects/Lead/fields/Interpreter_Required__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Required__c</fullName>
    <label>Interpreter Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>