force-app/main/default/objects/Lead/fields/Interview_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Completed_Date__c</fullName>
    <label>Interview Completed Date</label>
    <type>Date</type>
</CustomField>