force-app/main/default/objects/Lead/fields/Interview_Time_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Interview_Time_Friendly__c</fullName>
    <formula>text(IF(
OR(
VALUE( MID( TEXT( Volunteer_Interview_Scheduled_For__c   + $User.Timezone_Offset__c /24), 12, 2 ) ) = 0,
VALUE( MID( TEXT( Volunteer_Interview_Scheduled_For__c   + $User.Timezone_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( Volunteer_Interview_Scheduled_For__c   + $User.Timezone_Offset__c /24), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( Volunteer_Interview_Scheduled_For__c   + $User.Timezone_Offset__c /24), 12, 2 ) ) &lt; 12,
0,
12
)
)) &amp; &quot;:&quot; &amp;
 MID( TEXT( Volunteer_Interview_Scheduled_For__c + $User.Timezone_Offset__c /24 ), 15, 2 ) 
&amp;
IF(
VALUE( MID( TEXT( Volunteer_Interview_Scheduled_For__c + $User.Timezone_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)</formula>
    <label>Interview Time Friendly</label>
    <type>Text</type>
</CustomField>