force-app/main/default/objects/Lead/fields/Languages_Other_Than_English__c.field-meta.xml
<CustomField>
    <fullName>Languages_Other_Than_English__c</fullName>
    <label>Languages Other Than English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>