force-app/main/default/objects/Lead/fields/Lead_Conversion_Validation_Errors__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Validation_Errors__c</fullName>
    <formula>Diagnosis_Info_Errors__c  &amp; if( Has_Child_Under_14__c ,&apos;&apos;,&apos; No child &lt; 14&apos;)  &amp;  if(Family_Contact_Details_Provided__c,&apos;&apos;,&apos; required contact fields blank&apos;)
&amp; if ( NoPatientSelected__c , &apos;No Patient Selected&apos;,&apos;&apos;)</formula>
    <label>Lead Conversion Validation Errors</label>
    <type>Text</type>
</CustomField>