force-app/main/default/objects/Lead/fields/Lead_Mapping_Processed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mapping_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Mapping Processed</label>
    <type>Checkbox</type>
</CustomField>