force-app/main/default/objects/Lead/fields/Lead_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rejection_Reason__c</fullName>
    <label>Lead Rejection Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>