force-app/main/default/objects/Lead/fields/Lead_Status_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Date_Change__c</fullName>
    <description>Used in workflow to track when Lead Status Changed from New to Contacting</description>
    <label>Lead Status Date Change</label>
    <type>Date</type>
</CustomField>