force-app/main/default/objects/Lead/fields/Lead_Valid__c.field-meta.xml
<CustomField>
    <fullName>Lead_Valid__c</fullName>
    <formula>if(isblank( Lead_Conversion_Validation_Errors__c ),true,false)</formula>
    <label>Lead Valid</label>
    <type>Checkbox</type>
</CustomField>