force-app/main/default/objects/Lead/fields/LeadProcessDays__c.field-meta.xml
<CustomField>
    <fullName>LeadProcessDays__c</fullName>
    <formula>(Lead_Status_Date_Change__c) -DATEVALUE(CreatedDate)</formula>
    <label>LeadProcessDays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>