force-app/main/default/objects/Lead/fields/Linked_In_Profile__c.field-meta.xml
<CustomField>
    <fullName>Linked_In_Profile__c</fullName>
    <label>Linked In Profile</label>
    <type>Url</type>
</CustomField>