force-app/main/default/objects/Lead/fields/Mapping_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Definition_Name__c</fullName>
    <defaultValue>if ( $RecordType.DeveloperName  = &quot;Family_Application&quot;,&quot;FamilyApplication&quot;,&quot;VolunteerApplication&quot;)</defaultValue>
    <label>Mapping Definition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>