force-app/main/default/objects/Lead/fields/Media_Permission_Photo_Share__c.field-meta.xml
<CustomField>
    <fullName>Media_Permission_Photo_Share__c</fullName>
    <label>Media Permission Photo Share</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>