force-app/main/default/objects/Lead/fields/Media_Permission_Photos__c.field-meta.xml
<CustomField>
    <fullName>Media_Permission_Photos__c</fullName>
    <inlineHelpText>TBC</inlineHelpText>
    <label>Media Permission Photos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>