force-app/main/default/objects/Lead/fields/Media_permission_Public_2019__c.field-meta.xml
<CustomField>
    <fullName>Media_permission_Public_2019__c</fullName>
    <label>Media permission Public</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>