force-app/main/default/objects/Lead/fields/New_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>New_ExternalId__c</fullName>
    <formula>FirstName+LastName+Email</formula>
    <label>New ExternalId</label>
    <type>Text</type>
</CustomField>