force-app/main/default/objects/Lead/fields/NoPatientSelected__c.field-meta.xml
<CustomField>
    <fullName>NoPatientSelected__c</fullName>
    <formula>not(OR( Child_1_Has_Cancer__c , Child_2_Has_Cancer__c , Child_3_Has_Cancer__c , Child_4_Has_Cancer__c , Parent_1_Has_Cancer__c, Parent_2_Has_Cancer__c))</formula>
    <label>No Patient Selected</label>
    <type>Checkbox</type>
</CustomField>