force-app/main/default/objects/Lead/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Canberra</fullName>
            </value>
            <value>
                <fullName>Coffs Harbour</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>Hobart</fullName>
            </value>
            <value>
                <fullName>Illawarra</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Townsville</fullName>
            </value>
            <value>
                <fullName>Cairns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>