force-app/main/default/objects/Lead/fields/Other_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_Email__c</fullName>
    <label>Other Contact Email</label>
    <type>Email</type>
</CustomField>