force-app/main/default/objects/Lead/fields/Other_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_Name__c</fullName>
    <label>Other Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>