force-app/main/default/objects/Lead/fields/Parent1_Is_Patient__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Is_Patient__c</fullName>
    <formula>if( Parent_1_Has_Cancer__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent1_Is_Patient</label>
    <type>Text</type>
</CustomField>