force-app/main/default/objects/Lead/fields/Parent_1_Has_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Has_Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent 1 Has Cancer</label>
    <type>Checkbox</type>
</CustomField>