force-app/main/default/objects/Lead/fields/Parent_1_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Home_Phone__c</fullName>
    <label>Parent 1 Home Phone</label>
    <type>Phone</type>
</CustomField>