force-app/main/default/objects/Lead/fields/Parent_1_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Mobile__c</fullName>
    <label>Parent 1 Mobile</label>
    <type>Phone</type>
</CustomField>