force-app/main/default/objects/Lead/fields/Parent_1_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Post_Code__c</fullName>
    <label>Parent 1 Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>