force-app/main/default/objects/Lead/fields/Parent_1_Relationship_to_Child__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Relationship_to_Child__c</fullName>
    <label>Parent 1 Relationship to Child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Step-Father</fullName>
            </value>
            <value>
                <fullName>Step-Mother</fullName>
            </value>
            <value>
                <fullName>Carer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>