force-app/main/default/objects/Lead/fields/Parent_1_Street__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Street__c</fullName>
    <label>Parent 1 Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>