force-app/main/default/objects/Lead/fields/Parent_1_T_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_T_Shirt_Size__c</fullName>
    <label>Parent 1 T-Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult S</fullName>
            </value>
            <value>
                <fullName>Adult M</fullName>
            </value>
            <value>
                <fullName>Adult L</fullName>
            </value>
            <value>
                <fullName>Adult XL</fullName>
            </value>
            <value>
                <fullName>Adult 2XL</fullName>
            </value>
            <value>
                <fullName>Adult 3XL</fullName>
            </value>
            <value>
                <fullName>Adult 4XL</fullName>
            </value>
            <value>
                <fullName>Adult 5XL</fullName>
            </value>
            <value>
                <fullName>Adult XS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>