force-app/main/default/objects/Lead/fields/Parent_2_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for Offspring Bereaved families if contact is already deceased on sign up.</description>
    <label>Parent 2 Deceased?</label>
    <type>Checkbox</type>
</CustomField>