force-app/main/default/objects/Lead/fields/Parent_2_Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Deceased_Date__c</fullName>
    <description>When Parent 2 Deceased box is completed, fill in the deceased date as well.</description>
    <label>Parent 2 Deceased Date</label>
    <type>Date</type>
</CustomField>