force-app/main/default/objects/Lead/fields/Parent_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Email__c</fullName>
    <label>Parent 2 Email</label>
    <type>Email</type>
</CustomField>