force-app/main/default/objects/Lead/fields/Parent_2_Has_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Has_Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent 2 Has Cancer</label>
    <type>Checkbox</type>
</CustomField>