force-app/main/default/objects/Lead/fields/Parent_2_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Home_Phone__c</fullName>
    <label>Parent 2 Home Phone</label>
    <type>Phone</type>
</CustomField>