force-app/main/default/objects/Lead/fields/Parent_2_Is_Patient__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Is_Patient__c</fullName>
    <formula>if( Parent_2_Has_Cancer__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Parent 2 Is Patient</label>
    <type>Text</type>
</CustomField>