force-app/main/default/objects/Lead/fields/Parent_2_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Mobile__c</fullName>
    <label>Parent 2 Mobile</label>
    <type>Phone</type>
</CustomField>