force-app/main/default/objects/Lead/fields/Parent_2_Same_Address_as_Parent_1__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Same_Address_as_Parent_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent 2 Same Address as Parent 1</label>
    <type>Checkbox</type>
</CustomField>