force-app/main/default/objects/Lead/fields/Photo_ID_Sighted_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Photo_ID_Sighted_Completed_Date__c</fullName>
    <label>Photo ID Sighted Completed Date</label>
    <type>Date</type>
</CustomField>