force-app/main/default/objects/Lead/fields/Previous_Family_or_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Family_or_Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Family or Volunteer?</label>
    <type>Checkbox</type>
</CustomField>