force-app/main/default/objects/Lead/fields/Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read &amp; Agreed CQ Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>