force-app/main/default/objects/Lead/fields/Qualification_Skill_Experience_Interest__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Skill_Experience_Interest__c</fullName>
    <label>Qualification Skill Experience Interest</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>