force-app/main/default/objects/Lead/fields/Reason_for_Joining__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Joining__c</fullName>
    <label>Reason for Joining</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child with cancer</fullName>
            </value>
            <value>
                <fullName>Child passed away due to cancer</fullName>
            </value>
            <value>
                <fullName>Parent passed away due to cancer</fullName>
            </value>
            <value>
                <fullName>Parent or primary carer with cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>