force-app/main/default/objects/Lead/fields/Ref1_Complete__c.field-meta.xml
<CustomField>
    <fullName>Ref1_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ref1 Complete</label>
    <type>Checkbox</type>
</CustomField>