force-app/main/default/objects/Lead/fields/Ref2_Complete__c.field-meta.xml
<CustomField>
    <fullName>Ref2_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ref2 Complete</label>
    <type>Checkbox</type>
</CustomField>