force-app/main/default/objects/Lead/fields/Ref_1_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Ref_1_Mobile__c</fullName>
    <label>Ref 1 Mobile</label>
    <type>Phone</type>
</CustomField>