force-app/main/default/objects/Lead/fields/Ref_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Ref_1_Name__c</fullName>
    <label>Ref 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>